--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
     <div>
         <h1>Webpack</h1>
     </div>
-    <script src="js/scripts.min.js"></script>
+    <script src="javascripts/scripts.min.js"></script>
 </body>
 </html>
