--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,195 @@
-<!DOCTYPE hmtl>
-<html>
 
-<head>
-</head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="magazin online de drujbe">
+    <meta name="author" content="Andrei Ionita">
 
-<body>
-    <div>
-        <h1>Webpack</h1>
+    <title>Idrujba.ro - Magazinul tau de drujbe</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+
+    <!-- Custom styles for this template -->
+    <link href="css/main.css" rel="stylesheet">
+  </head>
+<!-- NAVBAR
+================================================== -->
+  <body ng-app="myapp" ng-controller="IndexController">
+    <embed src="sounds/intro.mp3" autostart="true" loop="false" width="0" height="0">
+    <div class="navbar-wrapper">
+      <div class="container">
+
+        <nav class="navbar navbar-inverse navbar-static-top">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">Idrujba.ro</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="/magazin.html">Magazin</a></li>
+                <li><a href="/login.html">Centrul de comanda</a></li>
+                <li><a href="/info.html">Info</a></li>
+                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/cos.html">Cos de cumparaturi</a></li>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+        </div>
     </div>
-    <script src="javascripts/scripts.min.js"></script>
-</body>
+
+
+    <!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img class="first-slide" src="images/wall.jpg" alt="First slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Primul magazin de drujbe din Romania</h1>
+              <p>Cauti o drujba? Normal ca da. Orice barbat adevarat are asa ceva prin casa. Bine ai venit pe Idrujba.ro, primul magazin online de drujbe din Romania</p>
+              <p><a class="btn btn-lg btn-primary" href="/info.html" role="button">Afla mai multe</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="second-slide" src="images/wall.jpg" alt="Second slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Cea mai completa gama de produse</h1>
+              <p>Gama noastra de produse contine orice dimensiune si orice putere. Garantia este in functie de produs. Livrarea se face in cel mai scurt timp</p>
+              <p><a class="btn btn-lg btn-primary" href="/magazin.html" role="button">Magazin</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="third-slide" src="images/wall.jpg" alt="Third slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Pentru pasionatii de lanturi, galagie si busteni</h1>
+              <p>Avem o intreaga sectiune despre ultimele stiri legate de concursuri de tapinari, produse si tehnologii noi</p>
+              <p><a class="btn btn-lg btn-primary" href="/info.html" role="button">Galeria</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+
+    <!-- Marketing messaging and featurettes
+    ================================================== -->
+    <!-- Wrap the rest of the page in another container to center all the content. -->
+
+    <div class="container marketing">
+
+      <!-- Three columns of text below the carousel -->
+      <div class="row">
+        <div class="col-lg-4">
+          <img class="img-circle" src="images/features/{{feature1.photo}}" alt="Generic placeholder image" width="140" height="140">
+          <h2>{{feature1.featureTitle}}</h2>
+          <p>{{feature1.featureSubtitle}}</p>
+          <p><a class="btn btn-default" href="#stirea1" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-lg-4">
+          <img class="img-circle" src="images/features/{{feature2.photo}}" alt="Generic placeholder image" width="140" height="140">
+          <h2>{{feature2.featureTitle}}</h2>
+          <p>{{feature2.featureSubtitle}}</p>
+          <p><a class="btn btn-default" href="#stirea2" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-lg-4">
+          <img class="img-circle" src="images/features/{{feature3.photo}}" alt="Generic placeholder image" width="140" height="140">
+          <h2>{{feature3.featureTitle}}</h2>
+          <p>{{feature3.featureSubtitle}}</p>
+          <p><a class="btn btn-default" href="#stirea3" role="button">View details &raquo;</a></p>
+        </div>
+      </div>
+
+
+      <!-- START THE FEATURETTES -->
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading" id="stirea1">{{feature1.featureTitle}} <span class="text-muted"> {{feature1.featureSlogan}}</span></h2>
+          <p class="lead">{{feature1.featureText}}</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive center-block" src="images/features/{{feature1.photo}}" alt="Generic placeholder image">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7 col-md-push-5">
+          <h2 class="featurette-heading" id="stirea2">{{feature2.featureTitle}} <span class="text-muted">{{feature2.featureSlogan}}</span></h2>
+          <p class="lead">{{feature2.featureText}}</p>
+        </div>
+        <div class="col-md-5 col-md-pull-7">
+          <img class="featurette-image img-responsive center-block" src="images/features/{{feature2.photo}}" alt="Generic placeholder image">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading" id="stirea3">{{feature3.featureTitle}}<span class="text-muted">{{feature3.featureSlogan}}</span></h2>
+          <p class="lead">{{feature3.featureText}}</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive center-block" src="images/features/{{feature3.photo}}" alt="Generic placeholder image">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <!-- /END THE FEATURETTES -->
+
+
+      <!-- FOOTER -->
+      <footer>
+        <p>&copy; 2015 Idrujba.ro, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      </footer>
+    </div>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
+    <script src="javascript/index-api.js"></script>
+  </body>
 </html>
