--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
 ================================================== -->
   <body ng-app="myapp" ng-controller="IndexController">
     <embed src="sounds/intro.mp3" autostart="true" loop="false" width="0" height="0">
+      <h1>This is my header</h1>
     <div class="navbar-wrapper">
       <div class="container">
 
